data/derived/comb/progs/unify/prog1617.ml.out
Characters 129-131:
  | b' -> b'
          ^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * bool
